--- a/admin_finance/invoice_masuk.html
+++ b/admin_finance/invoice_masuk.html
@@ -156,6 +156,7 @@
 									</span>
 								</a>
 							</li>
+							<!-- Manj BArang --> 
 							<!--Manajemen Invoice Keluar-->
 							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
