--- a/admin_finance/rincian_invoice_masuk.html
+++ b/admin_finance/rincian_invoice_masuk.html
@@ -13,9 +13,9 @@
 	<html lang="en" >
 	<!-- begin::Head -->
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8">
 		<title>
-			Admin Finance | Rinican Invoice Masuk
+			Admin Finance | Rincian Invoice Masuk
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -148,6 +148,8 @@
 									</span>
 								</a>
 							</li>
+
+							<!-- Manj BArang --> 
 							<!--Manajemen Invoice Keluar-->
 							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
@@ -283,6 +285,9 @@
 												</p> 
 												<p id="nama_pelanggan">
 													<i class="flaticon-users"> </i> PT. DAIKIN AIRCONDITONING INDONESIA
+												</p>
+												<p id="gudang">
+													<i class="fa fa-home"> </i> Toko (Pajak)
 												</p>
 												
 											</div>
