--- a/admin_gudang/edit_inventory.html
+++ b/admin_gudang/edit_inventory.html
@@ -99,7 +99,7 @@
 							<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
 								<!-- BEGIN: Horizontal Menu -->
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
-									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_toko.png">
+									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/Asset 5@2x.png">
 								</div>
 								<!-- END: Horizontal Menu -->								
 								<!-- BEGIN: Topbar -->
@@ -300,6 +300,13 @@
 												<div class="col-10">
 													<img style="width: 200px;height: auto" id="gambar_barang" src="https://www.static-src.com/wcsstore/Indraprastha/images/catalog/full//1027/alexander_alexander-step-ladder-aluminium-tangga--135-cm-_full02.jpg">
 												</div>
+
+
+											</div>
+											<div align="center" style="margin-top: 30px" class="offset-lg-3 col-lg-6">
+												<img style="display: none" id="image-preview" alt="image preview"/>
+												<br/>
+												<input type="file" id="image-source" onchange="previewImage();"/>
 											</div>
 											<div class="form-group m-form__group row">
 												<label  class="col-2 col-form-label">
