--- a/admin_gudang/index.html
+++ b/admin_gudang/index.html
@@ -336,7 +336,7 @@
 													<th>Nama Barang</th>
 													<th>Tipe</th>
 													<th>Merek</th>
-													<th>Jumlah</th>
+													<th>Kategori </th>
 													<th>Satuan</th>
 													<th>Keterangan</th>
 												</tr>
@@ -350,7 +350,7 @@
 													<td>Thermistor RKD25GVM</td>
 													<td>Thermistor</td>
 													<td>Daikin</td>
-													<td>20</td>
+													<td>Unit</td>
 													<td>unit</td>
 													<td>-</td>
 												</tr>
@@ -362,7 +362,7 @@
 													<td>Thermistor RKD25GVM</td>
 													<td>Thermistor</td>
 													<td>Daikin</td>
-													<td>20</td>
+													<td>Unit</td>
 													<td>unit</td>
 													<td>-</td>
 												</tr>
@@ -374,7 +374,7 @@
 													<td>Thermistor RKD25GVM</td>
 													<td>Thermistor</td>
 													<td>Daikin</td>
-													<td>20</td>
+													<td>Material</td>
 													<td>unit</td>
 													<td>-</td>
 												</tr>
@@ -386,7 +386,7 @@
 													<td>Thermistor RKD25GVM</td>
 													<td>Thermistor</td>
 													<td>Daikin</td>
-													<td>20</td>
+													<td>Material</td>
 													<td>unit</td>
 													<td>-</td>
 												</tr>
@@ -398,7 +398,7 @@
 													<td>Thermistor RKD25GVM</td>
 													<td>Thermistor</td>
 													<td>Daikin</td>
-													<td>20</td>
+													<td>Unit</td>
 													<td>unit</td>
 													<td>-</td>
 												</tr>
@@ -523,14 +523,14 @@
 					width: 80
 				},
 				{
-					field: 'Jumlah',
+					field: 'Kategori',
 					textAlign: 'center',
 					width: 60
 				},
 				{
 					field: 'Satuan',
 					textAlign: 'center',
-					width: 60
+					width: 50
 				},
 				{
 					field: 'Keterangan',
