--- a/admin_gudang/inventory.html
+++ b/admin_gudang/inventory.html
@@ -507,7 +507,7 @@
 																		</div>
 																		<div class="col-md-4 offset-md-4">
 																			<div class="m-input-icon m-input-icon--left">
-																				<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+																				<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch2">
 																				<span class="m-input-icon__icon m-input-icon__icon--left">
 																					<span>
 																						<i class="la la-search"></i>
@@ -712,7 +712,7 @@
 				},
 
 				// column sorting
-				sortable: false,
+				sortable: true,
 				search: {
 					input: $('#generalSearch'),
 				},
@@ -794,9 +794,9 @@
 				},
 
 				// column sorting
-				sortable: false,
+				sortable: true,
 				search: {
-					input: $('#generalSearch'),
+					input: $('#generalSearch2'),
 				},
 				columns: [
 
