--- a/admin_gudang/print_pengeluaran_material.html
+++ b/admin_gudang/print_pengeluaran_material.html
@@ -146,7 +146,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</h2>
 								<h4>No Surat : <span name="no_surat_pengeluaran_material">0037/SSM/SPK-PSG/MKS/III/2019</span></h4>
 								<h4>Tanggal : <span name="tanggal_surat">20/11/2019</span></h4>
-								<h5>Tipe Pajak : <span name="tipe_pajak">Non-Pajak</span></h5>
+								<h5>Tipe Pajak : <span name="tipe_pajak">Non-Pajak (Kantor)</span></h5>
 							</div>
 							<div style="margin-top: 20px" class="info row">
 								<div align="center" class="col-sm"> 
@@ -233,7 +233,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<br>
 													<br>
 													<div class="container-ttd" >
-														<p name="cs_menangani" align="Center">Surya Aditama</p>
+														<p name="cs_menangani" align="Center">[Nama Teknisi]</p>
 													</div>
 												</div>
 												<div align="center" class="col-sm">
@@ -247,7 +247,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<br>
 													<br>
 													<div class="container-ttd" >
-														<p name="cs_menangani" align="Center">Surya Aditama</p>
+														<p name="cs_menangani" align="Center">[Nama Pelanggan]</p>
 													</div>
 												</div>
 											</div>
