--- a/admin_kantor/manajemen_pelanggan.html
+++ b/admin_kantor/manajemen_pelanggan.html
@@ -368,8 +368,14 @@
 													<td>085145322137</td>
 													<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 													<td>
-														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
-															Rincian
+														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; ">
+															 <i class="fa fa-address-book-o"></i> Rincian
+														</a>
+
+
+
+														<a href="edit_pelanggan.html" class="btn btn-sm btn-info "  style="color:white;">
+															<i class="fa fa-pencil-square"></i> Edit
 														</a>
 													</td>
 												</tr>
@@ -380,8 +386,13 @@
 													<td>085145322137</td>
 													<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 													<td>
-														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
-															Rincian
+														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; ">
+															 <i class="fa fa-address-book-o"></i> Rincian
+														</a>
+
+
+														<a href="edit_pelanggan.html" class="btn btn-sm btn-info "  style="color:white;">
+															<i class="fa fa-pencil-square"></i> Edit
 														</a>
 													</td>
 												</tr>
@@ -392,8 +403,14 @@
 													<td>085145322137</td>
 													<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 													<td>
-														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
-															Rincian
+														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; ">
+															 <i class="fa fa-address-book-o"></i> Rincian
+														</a>
+
+
+
+														<a href="edit_pelanggan.html" class="btn btn-sm btn-info "  style="color:white;">
+															<i class="fa fa-pencil-square"></i> Edit
 														</a>
 													</td>
 												</tr>
@@ -404,8 +421,14 @@
 													<td>085145322137</td>
 													<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 													<td>
-														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
-															Rincian
+														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; ">
+															 <i class="fa fa-address-book-o"></i> Rincian
+														</a>
+
+
+
+														<a href="edit_pelanggan.html" class="btn btn-sm btn-info "  style="color:white;">
+															<i class="fa fa-pencil-square"></i> Edit
 														</a>
 													</td>
 												</tr>
@@ -416,8 +439,14 @@
 													<td>085145322137</td>
 													<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 													<td>
-														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
-															Rincian
+														<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; ">
+															 <i class="fa fa-address-book-o"></i> Rincian
+														</a>
+
+
+
+														<a href="edit_pelanggan.html" class="btn btn-sm btn-info "  style="color:white;">
+															<i class="fa fa-pencil-square"></i> Edit
 														</a>
 													</td>
 												</tr>
