--- a/admin_kantor/print_spk_pemasangan.html
+++ b/admin_kantor/print_spk_pemasangan.html
@@ -142,7 +142,7 @@
 							<!--end: Search Form -->
 							<!--begin: Datatable -->
 							<!-- <div class="m_datatable" id="local_data"></div> -->
-							<table class="table" id="tbl_rincian_spk_pemasangan">
+							<table class="table" id="">
 								<thead>
 									<tr>
 										<th>No</th>
@@ -172,20 +172,20 @@
 								</div>
 							</div>
 							<div id="item[0]" class="row">
-								<div class=" col-sm">
+								<div class=" col-sm-6">
 									<img name="gambar_sebelum" class="gambar" src="https://id-live-01.slatic.net/original/dacc9ce9456092852a813a9302be1292.jpg">
 
 								</div>
-								<div class=" col-sm">
+								<div class=" col-sm-6">
 									<img name="gambar_sesudah" class="gambar" src="https://id-live-01.slatic.net/original/dacc9ce9456092852a813a9302be1292.jpg">
 
 								</div>
 							</div>
 							<div id="item[1]" class="row">
-								<div class=" col-sm">
+								<div class=" col-sm-6">
 									<img name="gambar_sebelum" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
 								</div>
-								<div class=" col-sm">
+								<div class=" col-sm-6">
 									<img name="gambar_sesudah" class="gambar" src="http://cdn2.tstatic.net/tribunnews/foto/bank/images/20141027_213611_air-conditioner-ac.jpg">
 								</div>
 							</div>
