--- a/admin_kantor/riwayat_pelanggan.html
+++ b/admin_kantor/riwayat_pelanggan.html
@@ -352,6 +352,8 @@
 					</div>
 					<!-- END: Subheader -->
 					<div class="m-content">
+
+
 						<div class="row">
 							<div class="col-xl-12">
 								<div class="m-portlet m-portlet--mobile" id="spk_servis[0]">
@@ -392,7 +394,7 @@
 										<h4 align="center">
 											Pengecekan Awal
 										</h4>
-										<table style="width: 100%" class="tg">
+										<table style="width: 100%" class="tg table_riwayat" >
 											<tr>
 												<th style="width: 30%" class="tg-s268" rowspan="2">Komponen</th>
 												<th style="width: 20%" class="tg-s268" colspan="2">Kondisi</th>
