--- a/admin_finance/rincian_invoice_material.html
+++ b/admin_finance/rincian_invoice_material.html
@@ -148,6 +148,8 @@
 									</span>
 								</a>
 							</li>
+
+							<!-- Manj BArang --> 
 							<!--Manajemen Invoice Keluar-->
 							<li class="m-menu__item  m-menu__item--submenu m-menu__item--open m-menu__item--expanded" aria-haspopup="true" data-menu-submenu-toggle="hover">
 								<a href="#" class="m-menu__link m-menu__toggle">
