--- a/admin_gudang/rincian_stock_kantor.html
+++ b/admin_gudang/rincian_stock_kantor.html
@@ -13,7 +13,7 @@
 	<html lang="en" >
 	<!-- begin::Head -->
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8">
 		<title>
 			Admin Gudang | Rinican Stock Kantor
 		</title>
@@ -301,15 +301,23 @@
 												Satuan
 											</label>
 											<div class="col-10">
-												<input disabled="" class="form-control m-input" type="text" value="" id="satuan_barang">
+												<input disabled="" class="form-control m-input" type="text" value="Unit" id="satuan_barang">
 											</div>
 										</div>
 										<div class="form-group m-form__group row">
 											<label  class="col-2 col-form-label">
-												Kartu No. 
+												Kode 
 											</label>
 											<div class="col-10">
-												<input disabled="" class="form-control m-input" type="text" value="" id="no_kartu">
+												<input disabled="" class="form-control m-input" type="text" value="#12122" id="no_kartu">
+											</div>
+										</div>
+										<div class="form-group m-form__group row">
+											<label  class="col-2 col-form-label">
+												Gudang 
+											</label>
+											<div class="col-10">
+												<input disabled="" class="form-control m-input" type="text" value="Kantor" id="no_kartu">
 											</div>
 										</div>
 										<table class="table" id="tbl_rincian_stock">
