--- a/admin_gudang/rincian_stock_toko.html
+++ b/admin_gudang/rincian_stock_toko.html
@@ -301,15 +301,23 @@
 												Satuan
 											</label>
 											<div class="col-10">
-												<input disabled="" class="form-control m-input" type="text" value="" id="satuan_barang">
+												<input disabled="" class="form-control m-input" type="text" value="Unit" id="satuan_barang">
 											</div>
 										</div>
 										<div class="form-group m-form__group row">
 											<label  class="col-2 col-form-label">
-												Kartu No. 
+												Kode 
 											</label>
 											<div class="col-10">
-												<input disabled="" class="form-control m-input" type="text" value="" id="no_kartu">
+												<input disabled="" class="form-control m-input" type="text" value="#12122" id="no_kartu">
+											</div>
+										</div>
+										<div class="form-group m-form__group row">
+											<label  class="col-2 col-form-label">
+												Gudang 
+											</label>
+											<div class="col-10">
+												<input disabled="" class="form-control m-input" type="text" value="Toko (PPn)" id="no_kartu">
 											</div>
 										</div>
 										<table class="table" id="tbl_rincian_stock">
