--- a/admin_gudang/stock.html
+++ b/admin_gudang/stock.html
@@ -298,7 +298,7 @@
 													<thead>
 														<tr>
 															<th>No</th>
-															<th>Last Update</th>
+															<th>Kategori</th>
 															<th>Kode</th>
 															<th>Nama Barang</th>
 															<th>Tipe</th>
@@ -313,7 +313,7 @@
 													<tbody>
 														<tr>
 															<td>1</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -328,7 +328,7 @@
 														</tr>
 														<tr>
 															<td>2</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -343,7 +343,7 @@
 														</tr>
 														<tr>
 															<td>3</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -358,7 +358,7 @@
 														</tr>
 														<tr>
 															<td>4</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -373,7 +373,7 @@
 														</tr>
 														<tr>
 															<td>5</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -394,7 +394,7 @@
 													<thead>
 														<tr>
 															<th>No</th>
-															<th>Last Update</th>
+															<th>Kategori</th>
 															<th>Kode</th>
 															<th>Nama Barang</th>
 															<th>Tipe</th>
@@ -409,7 +409,7 @@
 													<tbody>
 														<tr>
 															<td>1</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -424,7 +424,7 @@
 														</tr>
 														<tr>
 															<td>2</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -439,7 +439,7 @@
 														</tr>
 														<tr>
 															<td>3</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -454,7 +454,7 @@
 														</tr>
 														<tr>
 															<td>4</td>
-															<td>20/19/2018</td>
+															<td>Material</td>
 															<td>#14253617</td>
 															<td>Thermistor RKD25GVM</td>
 															<td>Thermistor</td>
@@ -560,7 +560,7 @@
 				},
 
 				// column sorting
-				sortable: false,
+				sortable: true,
 				search: {
 					input: $('#generalSearch'),
 				},
@@ -572,16 +572,14 @@
 					width: 30
 				},
 				{
-					field: 'Last Update',
+					field: 'Kategori',
 					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
-					width: 70
+   					width: 70
 				},
 				{
 					field: 'Kode',
 					textAlign: 'center',
-					width: 70
+					width: 60
 				},
 				{
 					field: 'No Seri',
@@ -663,7 +661,7 @@
 				},
 
 				// column sorting
-				sortable: false,
+				sortable: true,
 				search: {
 					input: $('#generalSearch'),
 				},
@@ -675,10 +673,8 @@
 					width: 30
 				},
 				{
-					field: 'Last Update',
+					field: 'Kategori',
 					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
 					width: 70
 				},
 				{
