--- a/admin_kantor/edit_pelanggan.html
+++ b/admin_kantor/edit_pelanggan.html
@@ -123,130 +123,171 @@
 		<!-- begin::Body -->
 		<div class="m-grid__item m-grid__item--fluid m-grid m-grid--ver-desktop m-grid--desktop m-body">
 			<!-- BEGIN: Left Aside -->
-			<button class="m-aside-left-close  m-aside-left-close--skin-dark " id="m_aside_left_close_btn">
-				<i class="la la-close"></i>
-			</button>
-			<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-dark ">
-				<!-- BEGIN: Aside Menu -->
-				<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark" data-menu-vertical="true" data-menu-scrollable="false" data-menu-dropdown-timeout="500" >
-					<!-- ASIDE MENU DISINI -->
-					<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
-						<!-- DASHBOARD -->
-						<li class="m-menu__item  " aria-haspopup="true" >
-							<a  href="index.html" class="m-menu__link ">
-								<i class="m-menu__link-icon flaticon-line-graph"></i>
-								<span class="m-menu__link-title">
-									<span class="m-menu__link-wrap">
-										<span class="m-menu__link-text">
-											Dashboard
+				<button class="m-aside-left-close  m-aside-left-close--skin-dark " id="m_aside_left_close_btn">
+					<i class="la la-close"></i>
+				</button>
+				<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-dark ">
+					<!-- BEGIN: Aside Menu -->
+					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark" data-menu-vertical="true" data-menu-scrollable="false" data-menu-dropdown-timeout="500" >
+						<!-- ASIDE MENU DISINI -->
+						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
+							<!-- DASHBOARD -->
+							<li class="m-menu__item  " aria-haspopup="true" >
+								<a  href="index.html" class="m-menu__link ">
+									<i class="m-menu__link-icon flaticon-line-graph"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Dashboard
+											</span>
 										</span>
 									</span>
-								</span>
-							</a>
-						</li>
-						<!-- List SPK -->
-						<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
-							<a href="#" class="m-menu__link m-menu__toggle">
-								<i class="m-menu__link-icon flaticon-folder-2"></i>
-								<span class="m-menu__link-text">
-									List SPK
-								</span>
-								<i style="font-size: 1.5rem" class="m-menu__ver-arrow fa fa-caret-right"></i>
-							</a>
-							<div class="m-menu__submenu " style="">
-								<span class="m-menu__arrow"></span>
-								<ul class="m-menu__subnav">
-									<li class="m-menu__item  m-menu__item--parent" aria-haspopup="true">
-										<span class="m-menu__link">
+								</a>
+							</li>
+							<!-- Manajemen Pelanggan -->
+							<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
+								<a  href="manajemen_pelanggan.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Pesanan
+												Manajemen	Pelanggan
 											</span>
-										</span>
-									</li>
-									<li class="m-menu__item " aria-haspopup="true">
-										<a href="spk_pemasangan.html" class="m-menu__link ">
-											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-												<span></span>
-											</i>
-											<span class="m-menu__link-text">
-												SPK Pemasangan
-											</span>
-										</a>
-									</li>
-									<li class="m-menu__item " aria-haspopup="true">
-										<a href="spk_servis.html"  class="m-menu__link ">
-											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-												<span></span>
-											</i>
-											<span class="m-menu__link-text">
-												SPK Servis
-											</span>
-										</a>
-									</li>
-									<li class="m-menu__item " aria-haspopup="true">
-										<a href="spk_free.html"  class="m-menu__link ">
-											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-												<span></span>
-											</i>
-											<span class="m-menu__link-text">
-												SPK Free
-											</span>
-										</a>
-									</li>
-									<li class="m-menu__item " aria-haspopup="true">
-										<a href="spk_komplain.html"  class="m-menu__link ">
-											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-												<span></span>
-											</i>
-											<span class="m-menu__link-text">
-												SPK Komplain
-											</span>
-										</a>
-									</li>
-									<li class="m-menu__item " aria-haspopup="true">
-										<a href="spk_survey.html"  class="m-menu__link ">
-											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-												<span></span>
-											</i>
-											<span class="m-menu__link-text">
-												SPK Survey
-											</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<!-- Penawaran -->
-						<li class="m-menu__item" aria-haspopup="true" >
-							<a  href="manajemen_penawaran.html" class="m-menu__link ">
-								<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
-								<span class="m-menu__link-title">
-									<span class="m-menu__link-wrap">
-										<span class="m-menu__link-text">
-											Penawaran
 										</span>
 									</span>
-								</span>
-							</a>
-						</li>
-						<!-- Pelanggan -->
-						<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
-							<a  href="manajemen_pelanggan.html" class="m-menu__link ">
-								<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
-								<span class="m-menu__link-title">
-									<span class="m-menu__link-wrap">
-										<span class="m-menu__link-text">
-											Pelanggan
+								</a>
+							</li>
+							<!-- Manajemen Pesanan-->
+							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
+								<a href="#" class="m-menu__link m-menu__toggle">
+									<i class="m-menu__link-icon flaticon-folder-2"></i>
+									<span class="m-menu__link-text">
+										Manajemen Pesanan
+									</span>
+									<i style="font-size: 1.5rem" class="m-menu__ver-arrow fa fa-caret-right"></i>
+								</a>
+								<div class="m-menu__submenu " style="">
+									<span class="m-menu__arrow"></span>
+									<ul class="m-menu__subnav">
+										<li class="m-menu__item  m-menu__item--parent" aria-haspopup="true">
+											<span class="m-menu__link">
+												<span class="m-menu__link-text">
+													Pesanan
+												</span>
+											</span>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_pemasangan.html" class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Pemasangan
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_servis.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Servis
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_free.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Free
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_komplain.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Komplain
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_survey.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Survey
+												</span>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<!-- Manajemen Penawaran -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="manajemen_penawaran.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Manajemen Penawaran
+											</span>
 										</span>
 									</span>
-								</span>
-							</a>
-						</li>
-					</ul>
+								</a>
+							</li>
+							<!-- Master Stock -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="master_stock.html" class="m-menu__link ">
+									<i class="m-menu__link-icon flaticon-list-1"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Master Stock
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Harga Item dan Jasa -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="manajemen_harga.html" class="m-menu__link ">
+									<i class="m-menu__link-icon la la-list"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Manajemen Harga
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Manajemen Pembayaran -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="manajemen_pembayaran.html" class="m-menu__link ">
+									<i class="m-menu__link-icon flaticon-file-1"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												manajemen pembayaran
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<!-- END: Aside Menu -->
 				</div>
-				<!-- END: Aside Menu -->
-			</div>
-			<!-- END: Left Aside -->
+				<!-- END: Left Aside -->
+
+
 			<div class="m-grid__item m-grid__item--fluid m-wrapper">
 				<!-- BEGIN: Subheader -->
 				<div class="m-subheader ">
@@ -284,17 +325,7 @@
 							</ul>
 						</div>
 						<div>
-							<span class="m-subheader__daterange" id="m_dashboard_daterangepicker">
-								<span class="m-subheader__daterange-label">
-									<span class="m-subheader__daterange-title"></span>
-									<span class="m-subheader__daterange-date m--font-brand"></span>
-								</span>
-								<a
-								href="#"
-								class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
-								<i class="la la-angle-down"></i>
-							</a>
-						</span>
+							
 					</div>
 				</div>
 			</div>
@@ -323,7 +354,7 @@
 											ID Pelanggan
 										</label>
 										<div class="col-10">
-											<input disabled="" class="form-control m-input" type="text" value="00230/PLG/MKS/III" id="id_pelanggan">
+											<input  class="form-control m-input" type="text" value="00230/PLG/MKS/III" id="id_pelanggan">
 										</div>
 									</div>
 									<div  class="form-group m-form__group row">
@@ -331,7 +362,7 @@
 											Nama Pelanggan
 										</label>
 										<div class="col-10">
-											<input disabled="" class="form-control m-input" type="text" value="Bpk. Hendy" id="nama_pelanggan">
+											<input  class="form-control m-input" type="text" value="Bpk. Hendy" id="nama_pelanggan">
 										</div>
 									</div>
 									<div class="form-group m-form__group row">
@@ -349,6 +380,8 @@
 										<div class="col-10">
 											<input class="form-control m-input" type="text" value="Jl. Poros Malino, Komplek Griya Riski Abadi C6" id="alamat_pelanggan">
 										</div>
+
+										<h3>MAP Draggable here</h3>
 									</div>
 									<div style="margin-top: 20px" align="center">
 										<button id="btn_edit_data_pelanggan" type="button" class="btn btn-primary">
@@ -365,6 +398,9 @@
 		</div>
 	</div>
 	<!-- end:: Body -->
+
+
+
 	<!--  Begin::Modals -->
 	<div class="modal fade" id="modal_tambah_pemasangan" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -397,7 +433,7 @@
 								</option>
 							</select>
 						</div>
-					</div>
+					</div> 
 					<div class="form-group m-form__group row">
 						<label for="example-text-input" class="col-2 col-form-label">
 							Jumlah
