--- a/admin_kantor/index.html
+++ b/admin_kantor/index.html
@@ -13,7 +13,7 @@
 	<html lang="en" >
 	<!-- begin::Head -->
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8">
 		<title>
 			Admin kantor | Dashboard
 		</title>
