--- a/admin_kantor/manajemen_harga.html
+++ b/admin_kantor/manajemen_harga.html
@@ -370,7 +370,6 @@
 															<tr>
 																<th>No</th>
 																<th>Kode</th>
-																<th>No Seri</th>
 																<th>Nama Barang</th>
 																<th>Tipe</th>
 																<th>Merek</th>
@@ -385,7 +384,6 @@
 															<tr>
 																<td>1</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -400,7 +398,6 @@
 															<tr>
 																<td>2</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -415,7 +412,6 @@
 															<tr>
 																<td>3</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -430,7 +426,6 @@
 															<tr>
 																<td>4</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -445,7 +440,6 @@
 															<tr>
 																<td>5</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -509,7 +503,6 @@
 															<tr>
 																<td>1</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -524,7 +517,6 @@
 															<tr>
 																<td>2</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -539,7 +531,6 @@
 															<tr>
 																<td>3</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -554,7 +545,6 @@
 															<tr>
 																<td>4</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -569,7 +559,6 @@
 															<tr>
 																<td>5</td>
 																<td>#14253617</td>
-																<td>1105791</td>
 																<td>Thermistor RKD25GVM</td>
 																<td>Thermistor</td>
 																<td>Daikin</td>
@@ -612,58 +601,33 @@
 						<div class="modal-body">
 							<div class="form-group m-form__group row">
 								<label  class="col-3 col-form-label">
-									Kode Item
+									Kategori
+								</label>
+								<div class="col-9">
+									<select disabled="disabled"> 
+										<option>Barang</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									Kode / Nama Item
 								</label>
 								<div class="col-9">
 									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="kode_item" tabindex="-1" aria-hidden="true">
 										<option value="1" >
-											12345678
+											12345678 || AC 123
 										</option>
 										<option value="2">
-											21345635
+											21345635 || AC 2
 										</option>
 										<option value="3">
-											15357352
+											15357352 || AC4
 										</option>
 									</select>
 								</div>
 							</div>
-							<div class="form-group m-form__group row">
-								<label  class="col-3 col-form-label">
-									No. Seri
-								</label>
-								<div class="col-9">
-									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="no_seri_item" tabindex="-1" aria-hidden="true">
-										<option value="1" >
-											abcdefg
-										</option>
-										<option value="2">
-											bvcdffh
-										</option>
-										<option value="3">
-											ywdhfgs
-										</option>
-									</select>
-								</div>
-							</div>
-							<div class="form-group m-form__group row">
-								<label  class="col-3 col-form-label">
-									Nama item
-								</label>
-								<div class="col-9">
-									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="nama_item" tabindex="-1" aria-hidden="true">
-										<option value="1" >
-											AC satu
-										</option>
-										<option value="2">
-											AC dua
-										</option>
-										<option value="3">
-											AC tiga
-										</option>
-									</select>
-								</div>
-							</div>
+							
 							<div class="form-group m-form__group row">
 								<label  class="col-3 col-form-label">
 									Modal
@@ -822,58 +786,36 @@
 						<div class="modal-body">
 							<div class="form-group m-form__group row">
 								<label  class="col-3 col-form-label">
-									Kode Item
+									Kategori
+								</label>
+								<div class="col-9">
+									<select disabled="disabled"> 
+										<option class="active">Jasa</option>
+										<option>Barang</option>
+
+									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+
+								<label  class="col-3 col-form-label">
+									Kode / Nama Item
 								</label>
 								<div class="col-9">
 									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="kode_item" tabindex="-1" aria-hidden="true">
 										<option value="1" >
-											12345678
+											12345678 || Daikin 234
 										</option>
 										<option value="2">
-											21345635
+											21345635 || Daikin 234
 										</option>
 										<option value="3">
-											15357352
+											15357352 || Daikin 234
 										</option>
 									</select>
 								</div>
 							</div>
-							<div class="form-group m-form__group row">
-								<label  class="col-3 col-form-label">
-									No. Seri
-								</label>
-								<div class="col-9">
-									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="no_seri_item" tabindex="-1" aria-hidden="true">
-										<option value="1" >
-											abcdefg
-										</option>
-										<option value="2">
-											bvcdffh
-										</option>
-										<option value="3">
-											ywdhfgs
-										</option>
-									</select>
-								</div>
-							</div>
-							<div class="form-group m-form__group row">
-								<label  class="col-3 col-form-label">
-									Nama item
-								</label>
-								<div class="col-9">
-									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="nama_item" tabindex="-1" aria-hidden="true">
-										<option value="1" >
-											AC satu
-										</option>
-										<option value="2">
-											AC dua
-										</option>
-										<option value="3">
-											AC tiga
-										</option>
-									</select>
-								</div>
-							</div>
+							
 							<div class="form-group m-form__group row">
 								<label  class="col-3 col-form-label">
 									Modal
