--- a/admin_kantor/tambah_pelanggan.html
+++ b/admin_kantor/tambah_pelanggan.html
@@ -69,6 +69,21 @@
 			}
 
 		</style>
+
+
+
+		<style type="text/css">    
+		      #map {
+		        margin: 10px;
+		        width: 600px;
+		        height: 300px;  
+		        padding: 10px;
+		      }
+		</style>
+	<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+
+
+
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -400,7 +415,11 @@
 												<div class="col-10">
 													<input class="form-control m-input" type="text" value="Jl. Poros Malino, Komplek Griya Riski Abadi C6" id="alamat_pelanggan">
 												</div>
+
+												<div id="map"></div>
 											</div>
+
+
 											<div class="form-group m-form__group row">
 												<label  class="col-2 col-form-label">
 													Tipe Pelanggan
@@ -538,6 +557,41 @@
 
 	<!--end::Page Snippets -->
 	<script src="http://localhost:35729/livereload.js"></script>
+
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false"></script>
+	<script type="text/javascript">
+    //* Fungsi untuk mendapatkan nilai latitude longitude
+		function updateMarkerPosition(latLng) {
+		  document.getElementById('latitude').value = [latLng.lat()]
+		    document.getElementById('longitude').value = [latLng.lng()]
+		}
+		       
+		var map = new google.maps.Map(document.getElementById('map'), {
+		zoom: 12,
+		center: new google.maps.LatLng(-7.781921,110.364678),
+		 mapTypeId: google.maps.MapTypeId.ROADMAP
+		  });
+		//posisi awal marker   
+		var latLng = new google.maps.LatLng(-7.781921,110.364678);
+		 
+		/* buat marker yang bisa di drag lalu 
+		  panggil fungsi updateMarkerPosition(latLng)
+		 dan letakan posisi terakhir di id=latitude dan id=longitude
+		 */
+		var marker = new google.maps.Marker({
+		    position : latLng,
+		    title : 'lokasi',
+		    map : map,
+		    draggable : true
+		  });
+		   
+		updateMarkerPosition(latLng);
+		google.maps.event.addListener(marker, 'drag', function() {
+		 // ketika marker di drag, otomatis nilai latitude dan longitude
+		 //menyesuaikan dengan posisi marker 
+		    updateMarkerPosition(marker.getPosition());
+		  });
+	</script>
 	<script type="text/javascript">
 		var tbl_item_jasa_pemasangan = $('#tbl_item_jasa_pemasangan').mDatatable({
 			data: {
